[gd_scene load_steps=17 format=3 uid="uid://dlob0axb1wkq0"]

[ext_resource type="Script" uid="uid://dxfedvt20mvie" path="res://structures/trees/scenes/twee_composed.gd" id="1_eywws"]
[ext_resource type="Resource" uid="uid://dsgufqnv7s65n" path="res://structures/trees/stats/tall_tree_stat.tres" id="2_eywws"]
[ext_resource type="Texture2D" uid="uid://dtt6qi76ow2uv" path="res://structures/trees/sheets/tree_tall_sheet.png" id="3_dthtl"]
[ext_resource type="Shader" uid="uid://dyq8veu2iequj" path="res://structures/trees/shaders/tree_damage.gdshader" id="4_ekwly"]
[ext_resource type="Texture2D" uid="uid://c246f21ad4hjn" path="res://structures/trees/sheets/tree_square_sheet.png" id="5_bwurl"]
[ext_resource type="AnimationLibrary" uid="uid://b75x83ikhqgye" path="res://structures/trees/tree_animations.res" id="6_76io5"]
[ext_resource type="PackedScene" uid="uid://co2pv5y1xe6ad" path="res://components/tooltip_identifier_component/tooltip_identifier_component.tscn" id="7_csjnu"]
[ext_resource type="PackedScene" uid="uid://3kbd5phsf4bg" path="res://components/health_component/health_component.tscn" id="8_0wdcp"]
[ext_resource type="PackedScene" uid="uid://wvdajc3q2v8g" path="res://components/collision/hurtbox_component/hurtbox_component.tscn" id="9_nmetn"]
[ext_resource type="PackedScene" uid="uid://c8w0i4ah3vv4s" path="res://components/popup_emitter_component/popup_emitter_component.tscn" id="10_nqrql"]
[ext_resource type="PackedScene" uid="uid://bt5ejyes4aheb" path="res://components/movement/grid_position_component/grid_position_component.tscn" id="11_5b35y"]
[ext_resource type="PackedScene" uid="uid://bxmruf00te3al" path="res://components/movement/obstruction_component/obstruction_component.tscn" id="12_hr06b"]
[ext_resource type="PackedScene" uid="uid://diqna20ydddnp" path="res://components/forest_modifiers/nutreent_production_component/nutreent_production_component.tscn" id="13_hwjlj"]
[ext_resource type="PackedScene" uid="uid://2acjuseqlsik" path="res://components/forest_modifiers/water_production_component/water_production_component.tscn" id="14_cu8ms"]
[ext_resource type="PackedScene" uid="uid://72exs0gvf0fp" path="res://components/grid_range_component/grid_range_component.tscn" id="15_neanf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4fxg"]
resource_local_to_scene = true
shader = ExtResource("4_ekwly")
shader_parameter/pos = Vector2(0, 0)
shader_parameter/wind_amount = 1.0
shader_parameter/flash_amount = 0.0
shader_parameter/shake_amount = 30.0
shader_parameter/tint_amount = 0.0
shader_parameter/alpha = 1.0
shader_parameter/uv_y_offset = 0.62
shader_parameter/flash_color = Color(0.756863, 0.811765, 0.415686, 1)
shader_parameter/tint_color = Color(0.99447, 0.596609, 0.535069, 1)
shader_parameter/fps = 0.0
shader_parameter/frame_count = 0
shader_parameter/outline_alpha = 1.0
shader_parameter/outline_width = 1

[node name="TallTreeComposed" type="Node2D"]
script = ExtResource("1_eywws")
type = 6
tree_stat = ExtResource("2_eywws")
sheets = Array[Texture2D]([ExtResource("3_dthtl")])

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_j4fxg")
position = Vector2(0, -16)
texture = ExtResource("5_bwurl")
hframes = 9
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": ExtResource("6_76io5")
}

[node name="TooltipIdentifierComponent" parent="." instance=ExtResource("7_csjnu")]

[node name="HealthComponent" parent="." instance=ExtResource("8_0wdcp")]

[node name="HurtboxComponent" parent="." instance=ExtResource("9_nmetn")]
collision_mask = 6

[node name="PopupEmitterComponent" parent="." instance=ExtResource("10_nqrql")]
popup_color = Color(0.996078, 0.596078, 0.533333, 1)

[node name="GridPositionComponent" parent="." instance=ExtResource("11_5b35y")]

[node name="ObstructionComponent" parent="." instance=ExtResource("12_hr06b")]

[node name="NutreentProductionComponent" parent="." instance=ExtResource("13_hwjlj")]

[node name="WaterProductionComponent" parent="." instance=ExtResource("14_cu8ms")]

[node name="GridRangeComponent" parent="." instance=ExtResource("15_neanf")]
range = 1

[editable path="HurtboxComponent"]
